# blueoil

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CODEOWNERS.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  blueoil.sh  blueoil_test.sh  cpu.requirements.txt  dev.requirements.txt  doc.requirements.txt  docker-compose.yml  docker_build.sh  gpu.requirements.txt  netlify.toml  requirements.txt  setup.cfg  setup.py  test.requirements.txt
blueoil/converter/templates/: CMakeLists.txt  Makefile
blueoil/converter/templates/cmake/toolchain/: linux_aarch64.cmake  linux_arm.cmake
blueoil/converter/templates/debug/: keep_me.md
blueoil/converter/templates/include/: c2numpy.h  de10_nano.h  dlk_test.h  dma_buffer.h  global.tpl.h  memdriver.h  network.tpl.h  npy.hpp  operators.h  pack_input_to_qwords.h  parameters.h  parameters.tpl.h  quantizer.h  tensor_convert.h  tensor_save.h  tensor_view.h  time_measurement.h  types.h
blueoil/converter/templates/include/func/: add.h  average_pool.h  batch_normalization.h  cast.h  concat_on_depth.h  conv2d.h  depth_to_space.h  extract_image_patches.h  leaky_relu.h  lookup.h  matmul.h  max.h  max_pool.h  minimum.h  mul.h  pad.h  quantized_conv2d.h  real_div.h  relu.h  resize_nearest_neighbor.h  round.h  slice.h  softmax.h  split.h  sqrt.h  sub.h
blueoil/converter/templates/include/func/impl/: apply_thresholds.h  binary_op.h  pack_16bit.h  pop_count.h  quantized_conv2d_accelerator.h  quantized_conv2d_kn2row.h  quantized_conv2d_tiling.h  unary_op.h
blueoil/converter/templates/include/matrix/: col_major_to_row_major.h  multiplication.h  quantized_multiplication.h  row_major_to_col_major.h  shift_add.h  transpose.h
blueoil/converter/templates/mains/: main.tpl.cpp
blueoil/converter/templates/manual/consts/: dlk_test_node.tpl.cpp  dlk_test_node.tpl.h  input.tpl.cpp  input.tpl.h  scaling_factors.tpl.cpp  scaling_factors.tpl.h  thresholds.tpl.cpp  thresholds.tpl.h
blueoil/converter/templates/scripts/: derive_threshold.sh
blueoil/converter/templates/src/: network.tpl.cpp  network_c_interface.cpp  pack_input_to_qwords.cpp  quantizer.cpp  tensor_save.cpp  time_measurement.cpp  write_to_file.cpp
blueoil/converter/templates/src/func/: average_pool.cpp  cast.cpp  conv2d.cpp  lookup.cpp  matmul.cpp  max_pool.cpp  pad.cpp  softmax.cpp
blueoil/converter/templates/src/func/arm_neon/: batch_normalization.cpp
blueoil/converter/templates/src/func/generic/: batch_normalization.cpp
blueoil/converter/templates/src/func/x86_avx/: batch_normalization.cpp
blueoil/converter/templates/src/matrix/: multiplication.cpp  shift_add.cpp
blueoil/converter/templates/src/matrix/generic/: quantized_multiplication.cpp
blueoil/converter/templates/test/: CMakeLists.txt
blueoil/converter/templates/test/testBuffer/: CMakeLists.txt
dlk/backends/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
dlk/backends/docker/: Dockerfile  init.sh
dlk/backends/include/: cpp.h  de10_nano.h  fpga_utils.h  intel_hls.h
dlk/backends/include/common/: global.h  global.h~1f6fde9b3dcc1db70b20d49f47f769c2cb542689  global.h~HEAD  type_info.h  utils.h
dlk/backends/include/cpp/: conv1x1.h  conv3x3.h  utils.h
dlk/backends/include/intel_hls/: config.h  hls_components.h  qconv_kn2row_tiling.h
dlk/backends/include/params/: conv.h  gemm.h
dlk/backends/include/tb/: test_a8w1_conv.h  test_conv.h  test_input.h
dlk/backends/python/: build.py  env.py  utils.py
dlk/backends/src/cpp/: a8w1_conv3x3.cpp  conv1x1.cpp  conv3x3.cpp  conv_kn2row_tiling.cpp  gemm.cpp
dlk/backends/src/intel_hls/: hls_components.cpp  qconv1x1.cpp  qconv3x3.cpp  qconv_kn2row_tiling.cpp  qgemm.cpp
dlk/backends/src/tb/: unit_test.cpp
dlk/cpp/packer/: CMakeLists.txt
dlk/cpp/packer/header/: packer.h
dlk/cpp/packer/src/: packer.cpp
dlk/hw/intel/de10_nano/reset_fpga/: CMakeLists.txt  README.md  main.cpp
dlk/hw/intel/de10_nano/reset_fpga/include/: fpga_component.h  memdriver.h
dlk/hw/intel/de10_nano/reset_fpga/toolchain/: linux-armv8a-hardfloat.cmake
dlk/python/dlk/templates/: CMakeLists.txt  Makefile  Makefile.tpl
dlk/python/dlk/templates/cmake/: config.cmake
dlk/python/dlk/templates/cmake/toolchain/: linux_arm.cmake
dlk/python/dlk/templates/include/: c2numpy.h  de10_nano.h  dlk_test.h  dma_buffer.h  global.tpl.h  matrix_view.h  memdriver.h  network.tpl.h  npy.hpp  operators.h  pack2bits.h  pack_input_to_qwords.h  quantizer.h  tensor_convert.h  tensor_view.h  time_measurement.h  types.h
dlk/python/dlk/templates/include/func/: add.h  apply_thresholds.h  average_pool.h  batch_normalization.h  bias_add.h  concat_on_depth.h  concat_v2.h  conv2d.h  depth_to_space.h  leaky_relu.h  (+22 more)
dlk/python/dlk/templates/mains/: main.tpl.cpp  test_arm_main.cpp
dlk/python/dlk/templates/src/: network.tpl.cpp  network_c_interface.cpp  pack2b_neonv7.S  pack_input_to_qwords.cpp  quantizer.cpp  time_measurement.cpp  write_to_file.cpp
runtime/: CMakeLists.txt  CPPLINT.cfg  README.md
runtime/examples/: CMakeLists.txt  cat.npy  meta.yaml  run.cpp
runtime/include/: blueoil.hpp  blueoil_data_processor.hpp  blueoil_image.hpp  blueoil_npy.hpp  blueoil_opencv.hpp  blueoil_png.hpp
runtime/src/: blueoil.cpp  blueoil_data_processor.cpp  blueoil_image.cpp  blueoil_npy.cpp  blueoil_opencv.cpp  blueoil_png.cpp
runtime/test/: CMakeLists.txt  network_dummy.cpp  test_data_processor.cpp  test_image.cpp  test_load.cpp  test_npy.cpp  test_opencv.cpp  test_png.cpp  test_resize.cpp  test_tensor.cpp  test_util.cpp  test_util.hpp
runtime/test/images/: 3x3colors-float.npy  3x3colors.npy
runtime/tests/: Makefile  test_data_processor.cpp  test_image.cpp  test_opencv.cpp  test_resize.cpp  test_tensor.cpp
runtime/tests/images/: 3x3colors.ppm
tests/converter/unit-test/: CMakeLists.txt  UnitTest.md  unit-test.sh
tests/converter/unit-test/include/: tensor_view.h  time_measurement.h  types.h
tests/converter/unit-test/include/func/: add.h  mul.h  sub.h
tests/converter/unit-test/include/range/: algorithm.hpp  irange.hpp  numeric.hpp
tests/converter/unit-test/src/func/: add.cpp  mul.cpp  sub.cpp
(+1633 files in other folders)
