[metadata]
name = blueoil
version = 0.6.0
url = https://blue-oil.org
author = Blueoil development team
author_email = test@example.com
license = please contact to leapmind
description = Blueoil command line interface
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  prompt_toolkit==1.0.15
  whaaaaat
  jinja2
  pyyaml

[options.entry_points]
console_scripts =
    blueoil = blueoil.cli:main

[flake8]
max-line-length = 120
