[metadata]
name = blueoil
version = 0.19.0
url = https://blueoil.org
author = Blueoil development team
author_email = test@example.com
license = please contact to leapmind
description = Blueoil command line interface
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  jinja2
  click==6.7
  easydict==1.6
  matplotlib==2.2.2
  numpy==1.17.4
  pandas==1.0.1
  Pillow==6.2.1
  prompt_toolkit==3.0.3
  pytablewriter==0.47.0
  PyYAML==4.2b4
  tensorflow-datasets==1.0.2
  whaaaaat==0.5.2
  cython==0.27.3

[options.extras_require]
cpu =
  tensorflow==1.15.2
gpu =
  tensorflow-gpu==1.15.2
  gast==0.2.2
dist =
  horovod==0.18.1
  mpi4py==3.0.2
docs =
  better-apidoc==0.1.2
  sphinx-rtd-theme==0.2.4
  Sphinx==1.7.2
  sphinx-autobuild==0.7.1
test =
  flake8==3.5.0
  pytest==5.2.0
  pytest-xdist==1.30.0
  parameterized==0.7.0
validate =
  pycodestyle
  autopep8

[options.entry_points]
console_scripts =
    blueoil = blueoil.cmd.main:main

[flake8]
max-line-length = 120
