[metadata]
name = blueoil
version = 0.21.0
url = https://blueoil.org
author = Blueoil development team
author_email = test@example.com
license = please contact to leapmind
description = Blueoil command line interface
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  jinja2
  click==7.0
  easydict==1.9
  matplotlib==3.1.1
  numpy==1.18.1
  pandas==1.0.1
  Pillow==6.2.1
  prompt_toolkit==3.0.3
  pytablewriter==0.47.0
  PyYAML==5.3
  tensorflow-datasets==1.0.2
  inquirer==2.6.3
  cython==0.27.3

[options.extras_require]
cpu =
  tensorflow==1.15.2
gpu =
  tensorflow-gpu==1.15.2
dist =
  horovod==0.18.1
  mpi4py==3.0.2
docs =
  better-apidoc==0.3.1
  sphinx-rtd-theme==0.2.4
  Sphinx==2.4.4
  sphinx-autobuild==0.7.1
test =
  flake8==3.5.0
  pytest==5.3.5
  pytest-xdist==1.31.0
  parameterized==0.7.1
validate =
  pycodestyle
  autopep8

[options.entry_points]
console_scripts =
    blueoil = blueoil.cmd.main:main

[flake8]
max-line-length = 120
