if(USE_OPENCV)
  find_package( OpenCV REQUIRED )
  if(NOT OpenCV_FOUND)
    message(SEND_ERROR "OpenCV library not found.")
  endif()
else()
  if(USE_LIBPNG)
    find_package(PNG REQUIRED)
    if(NOT PNG_FOUND)
      message(SEND_ERROR "PNG library not found.")
    endif()
  endif()
endif()

macro(blueoil_unittest item)
  add_executable(blueoil-test-${item} test_${item}.cpp test_util.cpp)
  if(USE_OPENCV)
    target_link_libraries(blueoil-test-${item} blueoil ${OpenCV_LIBS})
  else()
    if(USE_LIBPNG)
      target_link_libraries(blueoil-test-${item} blueoil png pthread)
    else()
      target_link_libraries(blueoil-test-${item} blueoil pthread)
    endif()
  endif()
  add_test(blueoil-test-${item} blueoil-test-${item})
endmacro(blueoil_unittest)

blueoil_unittest(tensor)
blueoil_unittest(image)
blueoil_unittest(npy)
if(USE_LIBPNG)
  blueoil_unittest(png)
endif()
if(USE_OPENCV)
  blueoil_unittest(opencv)
  blueoil_unittest(load)
endif()
blueoil_unittest(resize)
blueoil_unittest(data_processor)

# test images for opencv
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/images
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
